# server/src/configs/swagger.json
@@ -37,7 +37,8 @@
         "tags": [
           "Users"
         ],
-        "description": "",
+        "summary": "List Users",
+        "description": "\r  You can send query with endpoint for search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -50,7 +51,18 @@
         "tags": [
           "Users"
         ],
+        "summary": "Create User",
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -63,6 +75,7 @@
         "tags": [
           "Users"
         ],
+        "summary": "Get Single User",
         "description": "",
         "parameters": [
           {
@@ -82,6 +95,7 @@
         "tags": [
           "Users"
         ],
+        "summary": "Update User",
         "description": "",
         "parameters": [
           {
@@ -89,6 +103,14 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           }
         ],
         "responses": {
@@ -101,6 +123,7 @@
         "tags": [
           "Users"
         ],
+        "summary": "Delete User",
         "description": "",
         "parameters": [
           {
@@ -123,6 +146,7 @@
         "tags": [
           "Users"
         ],
+        "summary": "Update User",
         "description": "",
         "parameters": [
           {
@@ -130,6 +154,14 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           }
         ],
         "responses": {
@@ -192,7 +224,8 @@
         "tags": [
           "Categories"
         ],
-        "description": "",
+        "summary": "List Category",
+        "description": "\r  You can send query with endpoint for search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -203,7 +236,18 @@
         "tags": [
           "Categories"
         ],
-        "description": "",
+        "summary": "Create Category",
+        "description": "Look to <b>'Models/Blog'</b> for parameters.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Category"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -216,6 +260,7 @@
         "tags": [
           "Categories"
         ],
+        "summary": "Get Single Category",
         "description": "",
         "parameters": [
           {
@@ -235,6 +280,7 @@
         "tags": [
           "Categories"
         ],
+        "summary": "Update Category",
         "description": "",
         "parameters": [
           {
@@ -242,6 +288,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -254,6 +309,7 @@
         "tags": [
           "Categories"
         ],
+        "summary": "Delete Category",
         "description": "",
         "parameters": [
           {
@@ -276,6 +332,7 @@
         "tags": [
           "Categories"
         ],
+        "summary": "Update Category",
         "description": "",
         "parameters": [
           {
@@ -283,6 +340,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -297,7 +363,8 @@
         "tags": [
           "Comments"
         ],
-        "description": "",
+        "summary": "Create Comment",
+        "description": "Look to <b>'Models/Comment'</b> for parameters.",
         "parameters": [
           {
             "name": "id",
@@ -308,16 +375,9 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "user": {
-                  "example": "any"
-                },
-                "post": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Comment"
             }
           }
         ],
@@ -331,6 +391,7 @@
         "tags": [
           "Comments"
         ],
+        "summary": "Update Comment",
         "description": "",
         "parameters": [
           {
@@ -338,6 +399,15 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -350,6 +420,7 @@
         "tags": [
           "Comments"
         ],
+        "summary": "Delete Comment",
         "description": "",
         "parameters": [
           {
@@ -513,7 +584,8 @@
         "tags": [
           "Likes"
         ],
-        "description": "",
+        "summary": "Create Blog",
+        "description": "Look to <b>'Models/Like'</b> for parameters.",
         "parameters": [
           {
             "name": "id",
@@ -524,16 +596,9 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "user_id": {
-                  "example": "any"
-                },
-                "post_id": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Like"
             }
           }
         ],
